<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/player_view"
        android:text="@string/media_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/thumbnail_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baking"
        android:adjustViewBounds="true"/>
    
    <TextView
        android:id="@+id/recipe_step_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/previous_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"/>

    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"/>





</LinearLayout>